# frappe_states_and_cities

./: README.md  pyproject.toml
frappe_states_and_cities/: hooks.py  install.py  modules.txt
frappe_states_and_cities/frappe_states_and_cities/doctype/city/: city.js  city.json  city.py
frappe_states_and_cities/frappe_states_and_cities/doctype/state/: state.js  state.json  state.py
