[project]
name = "frappe_states_and_cities"
authors = [
    { name = "M Umer Farooq", email = "umer2001.uf@gmail.com"}
]
description = "A frappe app that loads States and Cities into frappe site."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0", # Installed and managed by bench.
    "ijson~=3.2.3",
    "py-countries-states-cities-database"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
